--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 #terrain {
     position: relative;
     top: 450px;
-    background-color: rgb(149, 150, 150);
+    background-color: gray;
     width: 100%;
     height: 50px;
 }
