--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ body {
     top: 50px;
     width: 10px;
     height: 10px;
-    background-color: antiquewhite;
+    background-color: rgb(0, 0, 0);
+    background-image: url(lander.png);
 }
 
 #menu {
