--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 #game-screen {
     background-color: rgb(0, 0, 0);
     height: 500px;
-    width: 500px;
+    width: 600px;
 }
 
 
@@ -35,18 +35,18 @@ body {
 
 #character {
     position: relative;
-    left: 50px;
-    top: 50px;
-    width: 10px;
-    height: 10px;
+    left: 40px;
+    top: 40px;
+    width: 20px;
+    height: 20px;
     background-color: rgb(0, 0, 0);
-    background-image: url(assets/lander.png);
+    background-image: url(assets/Lunar.png);
 }
 
 #telemetry-panel {
     background-color: gray;
     height: 50px;
-    width: 500px;
+    width: 600px;
     display: flex;
     flex-direction: row;
     align-items: center;
