--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     width: 20px;
     height: 20px;
     background-color: rgb(0, 0, 0);
-    background-image: url(assets/Lunar.png);
+    background-image: url(assets/Lander_engine_off.png);
 }
 
 #telemetry-panel {
