--- a/style.css
+++ b/style.css
@@ -119,52 +119,20 @@ body {
     height: fit-content;
 }
 
-/*
-#data {
-    color: rgb(4, 107, 30);
-}
-
-#telemetry-panel {
-    background-color: gray;
-    width: 500px;
-    height: 50px;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-}
-
-#telemetry-screen {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#game-over-menu {
+    position: relative;
+    display: none;
     flex-direction: column;
-    background-color: #002a16;
-    width: fit-content;
-    height: 42px;
-    color: #9dfc51;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 16px;
-}
-
-#status-screen {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    background-color: #002a16;
-    width: 120px;
-    height: 32px;
-    color: #9dfc51;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin: 0px;
+    justify-content: center;
+    row-gap: 100px;
+    width: 100%;
+    height: fit-content;
 }
 
-#telemetry-text-speed {
-    margin: 0px;
+#game-over-message {
+    color: aliceblue;
+    font-size: 40px;
+    width: fit-content;
+    height: fit-content;
 }
-
-#telemetry-text-fuel {
-    margin: 0px;
-}
-*/
