--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+@font-face {
+    font-family: Good Old;
+    src: url('fonts/Good\ Old\ DOS.ttf');
+}
 body {
-    font-family: Arial;
+    font-family: Good Old;
     margin: 0px;
 }
 
@@ -51,6 +55,8 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    font-size: 11.5px;
+    text-align: center;
 }
 
 #speed-panel {
@@ -113,7 +119,7 @@ body {
     columns: 1;
     flex-direction: column;
     color: aliceblue;
-    font-size: 40px;
+    font-size: 50px;
     width: 100%;
     height: fit-content;
 
@@ -143,7 +149,7 @@ body {
 
 #game-over-message {
     color: aliceblue;
-    font-size: 40px;
+    font-size: 50px;
     width: fit-content;
     height: fit-content;
 }
@@ -153,7 +159,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    row-gap: 10px;
     width: 100%;
     height: fit-content;
 }
